connected all the pages

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -22,7 +22,7 @@
 		
 			  <ul class="navlist">
 				<li><a href="/index.html">Home</a></li>
-				<li><a href="AboutUs.html">About Us</a></li>
+				<li><a href="AboutUs.html" class="active">About Us</a></li>
 				<li id="service"><a href="#">Services</a>
 				  <ul id="list">
 					<li><a href="./LogIn.html" class="protected-link">Agile Coaching</a></li>
