--- a/HTML/Account_activation.html
+++ b/HTML/Account_activation.html
@@ -86,7 +86,7 @@
 						<input type="text" name="input" id="input4">
 						<input type="text" name="input" id="input5">
 					</div>
-					<input type="submit" value="Submit code">
+					<input type="submit" value="Submit code" onclick="window.location.href='./LogIn'">
 				</form>
 			</div>
 		</section>
