--- a/HTML/Agile-Coach/resource.html
+++ b/HTML/Agile-Coach/resource.html
@@ -59,7 +59,7 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
+                                href="../AgileCoaches-dashboard/agile-coach-dashboard.html"
                                 >Dashboard</a
                             >
                         </li>
@@ -67,8 +67,8 @@
                             <a
                                 class="nav-link fs-5"
                                 id="nav-link2"
-                                href="#"
-                                >Responses</a
+                                href="./resource.html"
+                                >Resources</a
                             >
                         </li>
                         <div class="btn-div d-flex gap-4 position-relative">
@@ -112,7 +112,7 @@
     </header>
     <main>
         <section class="resources-container text-white">
-            <div class="resources mt-5 pt-1">
+            <div class="resources mt-5 pt-1 pb-5">
                 <div class="resource1 mt-5 pt-5">
                     <h2 class="display-4">General Resources</h2>
                     <div class="hr"></div>
