--- a/HTML/Mentee-dashboard/bookings2.html
+++ b/HTML/Mentee-dashboard/bookings2.html
@@ -17,7 +17,7 @@
 			rel="stylesheet"
 			href="/CSS/bookings.css"
 		/>
-		<title>Document</title>
+		<title>Bookings2</title>
 	</head>
 	<body>
         <header>
@@ -126,7 +126,7 @@
         <main>
             <section class="main-sec mt-5 pt-5 d-flex gap-5">
                 <!-- side navbar -->
-                <div class="sidebar d-flex flex-column gap-4">
+                <div class="sidebar d-flex flex-column gap-4" id="side-bar">
                     <div class="profile-wrapper d-flex gap-3 mt-4 mb-4">
                         <img
                             src="/Images/dashboard-profile.svg"
@@ -232,7 +232,7 @@
                             <a
                                 href=""
                                 class="text-black ms-2 fs-5"
-                                >Setting</a
+                                >Settings</a
                             >
                         </div>
                     </div>
@@ -244,7 +244,7 @@
                     <a href="./Mentee-booking-response.html" class="text-black mx-5 px-5 fs-5">Pending</a>
                     <a href="" class="text-black ms-5 ps-5 fs-5">History</a>
                     <hr class="w-100 mb-4">
-                    <div class="card text-center mb-3 w-75 border border-2 border-black ">
+                    <div class="card text-center mt-5 w-75 border border-black ">
 						<div class="card-body mt-4 mb-5">
 							<h5 class="card-title text-start ms-3">Mentorship session with <a href="./Mentee-m-search-results.html">Peter David</a></h5>
 							<div class="card-text d-flex justify-content-evenly my-5">
@@ -274,7 +274,7 @@
 								>Send Message</a
 							>
 							<a
-								href="#"
+								href="./book-mentor.html"
 								class="btn btn-light border border-secondary-subtle ms-4 py-2 px-4 fs-5"
 								>Reschedule this call</a
 							>
@@ -285,7 +285,7 @@
 							>
 						</div>
 					</div>
-                    <div class="card text-center mb-3 w-75">
+                    <div class="card text-center my-5 w-75 border-black">
                         <div class="card-body mt-4 mb-5">
 							<h5 class="card-title text-start ms-3">Agile coaching session with <a href="./Mentee-m-search-results.html">Steve Brishton</a></h5>
 							<div class="card-text d-flex justify-content-evenly my-5">
@@ -294,14 +294,14 @@
 										src="/Images/uit-calender.svg"
 										alt=""
 									/>
-									<p class="fs-5">Mon, Aug 12</p>
+									<p class="fs-5">Friday, Aug 16</p>
 								</div>
 								<div class="card-date d-flex gap-3">
 									<img
 										src="/Images/booking-icon.svg"
 										alt=""
 									/>
-									<p class="fs-5">7:30 PM - 8:00 PM</p>
+									<p class="fs-5">5:00 PM - 5:30 PM</p>
 								</div>
 							</div>
 							<a
@@ -315,7 +315,7 @@
 								>Send Message</a
 							>
 							<a
-								href="#"
+								href="./book-coach.html"
 								class="btn btn-light border border-secondary-subtle ms-4 py-2 px-4 fs-5"
 								>Reschedule this call</a
 							>
