--- a/HTML/Mentee-dashboard/mentee-dashboard-1.html
+++ b/HTML/Mentee-dashboard/mentee-dashboard-1.html
@@ -84,14 +84,14 @@
 									<li>
 										<a
 											class="dropdown-item text-white mt-2"
-											href="../SearchPage.html"
+											href="../agile-search.html"
 											>Agile Coaching</a
 										>
 									</li>
 									<li>
 										<a
 											class="dropdown-item text-white my-3"
-											href="../SearchPage2.html"
+											href="../SearchPage.html"
 											>Mentorship</a
 										>
 									</li>
@@ -668,11 +668,12 @@
 					</div>
 				</div>
 			</section>
-
+                
+                    <!-- chatbot -->
 			<div class="toggle-div">
 				<button id="toggleChatButton">
 					<img
-						src="/Images/chatbot-icon.png"
+						src="/Images/chatbot-icon2.png"
 						alt=""
 					/>
 				</button>
@@ -850,6 +851,7 @@
 			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 			crossorigin="anonymous"
 		></script>
+		<script src="/language.js"></script>
 		<script src="/community.js"></script>
 	</body>
 </html>
