--- a/HTML/Mentor-dashboard/Mentor-dashboard.html
+++ b/HTML/Mentor-dashboard/Mentor-dashboard.html
@@ -16,6 +16,7 @@
 			integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="/CSS/footer.css">
 		<link
 			rel="stylesheet"
 			href="/CSS/mentor-dashboard.css"
@@ -65,7 +66,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="./Mentor-dashboard.html"
 									>Dashboard</a
 								>
 							</li>
@@ -73,8 +74,8 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
-									>Responses</a
+									href="./resource.html"
+									>Resources</a
 								>
 							</li>
 							<div class="btn-div d-flex gap-4 position-relative">
@@ -90,7 +91,7 @@
 									src="/Images/symbols-search.svg"
 									alt=""
 									class="position-absolute top-50 end-0 translate-middle-y me-3"
-									onclick="window.location.href='Mentee-m-search-results.html'"
+									onclick="window.location.href=''"
 								/>
 							</div>
 							<div class="dashboard-profile d-flex gap-4 ms-5">
@@ -104,7 +105,7 @@
 								/>
 								<img
 									src="/Images/Peter.svg"
-									alt="" class="w-25"
+									alt="" class="" style="width: 23%;"
 								/>
 								<img
 									src="/Images/symbols-arrow-drop-down.svg"
@@ -119,61 +120,61 @@
 		<main>
 			<section class="main-sec mt-5 pt-5 d-flex gap-5">
 				<!-- side navbar -->
-				<div class="sidebar d-flex flex-column gap-4 ps-3">
-					<div class="profile-wrapper d-flex gap-3 mt-4">
+				<aside class="sidebar d-flex flex-column gap-4 ps-3">
+					<div class="profile-wrapper d-flex gap-3 my-4">
 						<img
 							src="/Images/Peter.svg"
 							alt="" class="w-25"
 						/>
 						<div class="profile-content">
-							<h2 class="fs-4">Peter David</h2>
-							<a href="./profile.html">View profile</a>
+							<h2 class="fs-3">Peter David</h2>
+							<a href="./profile.html" class="ms-3">View profile</a>
 						</div>
 					</div>
 					<div
 						class="links-wrapper d-flex flex-column gap-5 position-fixed-start align-center"
 					>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/home-icon.svg"
 								alt=""
 							/>
 							<a
-								href=""
-								class="ms-2"
+								href="./waitlist.html"
+								class="ms-2 fs-5"
 								>Waitlist</a
 							>
 						</div>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/message.svg"
 								alt=""
 							/>
 							<a
 								href=""
-								class="ms-2"
+								class="ms-2 fs-5"
 								>Messages</a
 							>
 						</div>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/booking-icon.svg"
 								alt=""
 							/>
 							<a
 								href=""
-								class="ms-2"
+								class="ms-2 fs-5"
 								>Bookings</a
 							>
 						</div>
-						<div class="icon-links position-relative ">
+						<div class="icon-links position-relative ps-3">
 							<img
 								src="/Images/connection-icon.svg"
 								alt=""
 							/>
 							<a
 								href="#"
-								class="ms-2 community-link"
+								class="ms-2 community-link fs-5"
 								>Community</a
 							>
 								<div class="card w-100 px-2 position-absolute card3">
@@ -184,29 +185,29 @@
 								</div>
 							
 						</div>
-						<div class="icon-links">
+						<!-- <div class="icon-links ps-3">
 							<img
 								src="/Images/milestones-trophy.svg"
 								alt=""
 							/>
 							<a
 								href=""
-								class="ms-2"
+								class="ms-2 fs-5"
 								>Milestones</a
 							>
-						</div>
-						<div class="icon-links">
+						</div> -->
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/connection-icon.svg"
 								alt=""
 							/>
 							<a
-								href=""
-								class="ms-2"
+								href="./group-sessions_mentor.html"
+								class="ms-2 fs-5"
 								>Group sessions</a
 							>
 						</div>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/settings-icon.png"
 								alt=""
@@ -214,15 +215,15 @@
 							/>
 							<a
 								href=""
-								class="ms-2"
-								>Setting</a
+								class="ms-2 fs-5"
+								>Settings</a
 							>
 						</div>
 					</div>
-				</div>
+				</aside>
 				<!-- content -->
 				<div class="home-content mt-5 w-100">
-					<h4 class="fs-4">Profile</h4>
+					<h4 class="fs-2 fw-bold">Profile</h4>
 					<hr class="mb-4">
 					<div class="profile-wrapper d-flex align-items-center gap-4 mb-5">
 						<div class="profile-img">
@@ -232,7 +233,7 @@
 							/>
 						</div>
 						<div class="profile-text">
-							<h5 class="mb-2">Peter David</h5>
+							<h5 class="mb-2 fs-4 fw-semibold">Peter David</h5>
 							<p >Lead Product Designer at LinkedIn</p>
 							<p>10 years experience</p>
 							<p class="mb-3">Time zone Nigeria (GMT+1)</p>
@@ -271,18 +272,18 @@
 						</button> -->
 					</div>
 					<a
-						href=""
-						class="me-5 pe-5 fs-5"
+						href="./Mentor-dashboard.html"
+						class="me-5 pe-5 fs-3"
 						>Upcoming</a
 					>
 					<a
-						href=""
-						class="mx-5 px-5 text-black fs-5"
+						href="./waitlist.html"
+						class="mx-5 px-5 text-black fs-3"
 						>Waitlist</a
 					>
 					<a
-						href=""
-						class="ms-5 ps-5 text-black fs-5"
+						href="./history.html"
+						class="ms-5 ps-5 text-black fs-3"
 						>History</a
 					>
 					<!-- <hr class="w-100 mb-5" /> -->
@@ -306,7 +307,7 @@
 								</div>
 							</div>
 							<a
-								href="#"
+								href="./join-meeting.html"
 								class="btn btn-2 py-2 px-4 fs-5"
 								>Join Meeting</a
 							>
@@ -337,7 +338,7 @@
 								</div>
 							</div>
 							<a
-								href="#"
+								href="./join-meeting.html"
 								class="btn btn-2 py-2 px-4 fs-5"
 								>Join Meeting</a
 							>
@@ -351,6 +352,137 @@
 				</div>
 			</section>
 		</main>
+
+		<footer>
+			<div class="footer-wrapper py-5 d-flex gap-5">
+				<div class="footer-logo">
+					<img
+						src="/Images/Agilyst Logo5 3.jpg"
+						alt=""
+					/>
+				</div>
+				<div class="footer-content-wrapper">
+					<form
+						action=""
+						class=""
+					>
+						<input
+							type="email"
+							name=""
+							id=""
+							placeholder="Your Email"
+							class="border-rounded rounded-pill bg-transparent text-white py-2 ps-3 border-white w-75"
+							required
+						/>
+						<button
+							class="btn btn-large border rounded-pill bg-white pe-5 py-2 ps-2 ms-4"
+						>
+							<a
+								href=""
+								class="px-4 text-primary"
+							>
+								Subscribe Now!
+							</a>
+						</button>
+					</form>
+					<div
+						class="footer-links text-white d-flex justify-content-between my-5"
+					>
+						<div class="platform-links">
+							<h3 class="text-uppercase mb-2">Platform</h3>
+							<ul>
+								<li><a href="">Find Mentor</a></li>
+								<li><a href="">Become a Mentor</a></li>
+								<li><a href="">About Us</a></li>
+								<li><a href="">Contact Us</a></li>
+							</ul>
+						</div>
+						<div class="product-links">
+							<h3 class="text-uppercase mb-2">Product</h3>
+							<ul>
+								<li><a href="">Blog</a></li>
+								<li><a href="">Community</a></li>
+							</ul>
+						</div>
+						<div class="legal-links">
+							<h3 class="text-uppercase mb-2">Legal</h3>
+							<ul>
+								<li><a href="">Terms and Conditions</a></li>
+								<li><a href="">Privacy Policy</a></li>
+								<li><a href="">FAQs</a></li>
+							</ul>
+						</div>
+					</div>
+					<hr class="" />
+					<div
+						class="copyright d-flex justify-content-between w-100 align-items-center mt-5"
+					>
+						<p class="text-white d-flex align-items-center gap-3">
+							<span class="fs-3 text-white">©</span> All rights reserved 2023
+						</p>
+						<form
+							action=""
+							id="language-form"
+						>
+							<img
+								src="/Images/web.svg"
+								alt=""
+							/>
+							<select
+								name="role"
+								id="language-select"
+								class="py-2 ps-4 text-white bg-transparent border border-0"
+							>
+								<option
+									value=""
+									selected
+									disabled
+									class="bg-transparent option1"
+								>
+									English
+								</option>
+								<option value="">Bengali</option>
+								<option value="">Chinese</option>
+								<option value="en">English</option>
+								<option value="fr">French</option>
+								<option value="de">German</option>
+								<option value="">Hindi</option>
+								<option value="">Indonesian</option>
+								<option value="">Japanese</option>
+								<option value="">Korean</option>
+								<option value="">Mandarin</option>
+								<option value="">Marathi</option>
+								<option value="pt">Portuguese</option>
+								<option value="">Russian</option>
+								<option value="">Spanish</option>
+								<option value="">Standard Arabic</option>
+								<option value="">Swahili</option>
+								<option value="">Tamil</option>
+								<option value="">Telugu</option>
+								<option value="">Turkish</option>
+								<option value="">Urdu</option>
+								<option value="">Wu Chinese</option>
+							</select>
+						</form>
+						<div class="online-links-wrappers d-flex gap-3">
+							<img
+								src="/Images/instagram.svg"
+								alt=""
+							/><img
+								src="/Images/youtube-fill.svg"
+								alt=""
+							/><img
+								src="/Images/footer-facebook.svg"
+								alt=""
+							/><img
+								src="/Images/footer-linkedin.svg"
+								alt=""
+							/>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
