--- a/HTML/Mentor-dashboard/create-post.html
+++ b/HTML/Mentor-dashboard/create-post.html
@@ -127,16 +127,16 @@
 					>
 						<h4 class="display-4 fw-medium">Community Forum</h4>
 						<a
-							href=""
+							href="./new-posts.html"
 							class="fs-5"
 							>Recent</a
 						>
 						<a
-							href=""
+							href="./trending.html"
 							class="fs-5 text-black"
 							>Trending</a
 						>
-						<button class="btn community-btn px-5 py-2">
+						<button class="btn community-btn px-5 py-2" onclick="window.location.href='./create-post.html'">
 							Create a new Post
 						</button>
 					</div>
@@ -148,28 +148,36 @@
 					<div class="card-wrapper d-flex justify-content-between mt-4 mb-5">
 						<div class="card border-light card-1 px-3 pt-3 me-5">
 							<div class="card-body ms-3">
-								<h3 class="card-title mt-3 mb-3">
-									How to prepare for my first coaching session
+								<h3 class="card-title my-3 ms-5">
+									Tips on how to prepare for your first coaching session
 								</h3>
-								<p class="card-text mb-4">
-									"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-									do eiusmod <br />
-									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-									minim <br />veniam, quis nostrud exercitation ullamco laboris
-									nisi ut aliquip <br />
-									ex ea commodo consequat.
-								</p>
-								<hr class="mb-3" />
+								<div class="card-text mb-3 d-flex gap-5 ">
+									<div class="left-text">
+										<img src="/Images/arrow-up.svg" alt="">
+										<p class="my-4">14</p>
+										<img src="/Images/arrow-bottom.svg" alt="">
+									</div>
+									<div class="right-text">
+										<ul class="fw-medium">
+											<li>Know your goal.</li>
+											<li>Avoid binary thinking.</li>
+											<li>Ask questions but prepare them before the session.</li>
+											<li>Be prepared to get challenged. Ask the coach on how to get out of your comfort zone.</li>
+											<li>Be honest with your coach</li>
+										</ul>
+									</div>
+								</div>
+								<hr class="mb-2" />
 								<div class="profile d-flex gap-2 align-items-end w-100">
 									<img
 										src="/Images/Ali.svg"
 										alt=""
 									/>
 									<div class="text me-5">
-										<h5 class="">Ali Mohammed</h5>
-										<p>2hr ago</p>
+										<h5 class="fs-4">Ali Mohammed</h5>
+										<p class="fw-semibold">2hr ago</p>
 									</div>
-									<div class="views-comments d-flex gap-5 ms-5">
+									<div class="views-comments d-flex gap-5 ms-4">
 										<div class="views d-flex gap-2">
 											<img
 												src="/Images/eye.svg"
@@ -247,28 +255,36 @@
 						</div>
 					</div>
 					<div class="card-wrapper d-flex justify-content-between mt-4">
-						<div class="card border-light card-1 px-3 pt-3 me-5">
+						<div class="card border-light px-3 pt-3 me-5" style="width: 760px; height: 433px;">
 							<div class="card-body ms-3">
-								<h3 class="card-title mt-3 mb-3">
+								<h3 class="card-title my-3 ms-5">
 									Agile tools. Jira Vs Trello
 								</h3>
-								<p class="card-text mb-4">
-									"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-									do eiusmod <br />
-									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-									minim <br />veniam, quis nostrud exercitation ullamco laboris
-									nisi ut aliquip <br />
-									ex ea commodo consequat.
-								</p>
+								<div class="card-text mb-5 d-flex gap-5">
+									<div class="left-text">
+										<img src="/Images/arrow-up.svg" alt="" class="mb-5">
+										<p class="my-5"></p>
+										<img src="/Images/arrow-bottom.svg" alt="" class="mt-3">
+									</div>
+									<div class="right-text">
+                                        <p class="mb-4">While both Trello and Jira are top-notch management tools, they each have different strengths. 
+											The biggest difference between the two is that Trello offers just Kanban boards while Jira offers
+											Kanban, Scrum and Sprint boards. Scrum and Kanban boards are both used to visually track a 
+											project's tasks.</p>
+										<p>If you are specifically working in the agile software development field, Jira is your best bet.
+											However, if your team doesn't require industry-specific customization, Trello is a much more
+											practical choice. Track time, stay on budget, analyze reports and automate payroll.</p>
+									</div>
+								</div>
 								<hr class="mb-3" />
-								<div class="profile d-flex gap-2 align-items-end w-100">
+								<div class="profile d-flex gap-2 align-items-end w-100 mb-3">
 									<img
 										src="/Images/Peter.svg"
 										alt=""
 									/>
 									<div class="text me-5">
-										<h5 class="">Ali Mohammed</h5>
-										<p>2hr ago</p>
+										<h5 class="fs-4">Peter David</h5>
+										<p class="fw-semibold">2hr ago</p>
 									</div>
 									<div class="views-comments d-flex gap-5 ms-5">
 										<div class="views d-flex gap-2">
