--- a/HTML/Mentor-dashboard/new-posts.html
+++ b/HTML/Mentor-dashboard/new-posts.html
@@ -135,23 +135,15 @@
 							<h4 class="ms-4 mb-2 fs-5">Title</h4>
 							<div class="card2-top d-flex gap-3">
 								<div class="card border-light card2 comment-card1">
-									<p class="arrow ps-3 py-2"></p>
+									<p class=" ps-3 py-2">Are mentorship and coaching the same?</p>
 								</div>
 							</div>
-							<h4 class="mt-5">Description</h4>
-							<div class="comment-card card mt-3 pt-3 ps-2 pb-5">
-								<p>
-									"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-									do eiusmod <br />
-									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-									minim <br />
-									veniam, quis nostrud exercitation ullamco laboris nisi ut
-									aliquip <br />
-									ex ea commodo consequat. <br />
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-									do eiusmod <br />
-									tempor incididunt ut labore et dolore magna aliqua.
-								</p>
+							<h4 class="mt-5 ms-4">Description</h4>
+							<div class="comment-card card mt-3 pt-3 ps-2 pb-5 border-light" style="width: 763px; height: 300px;">
+								<h6 class="ms-3 mt-3">They are not the same but similar. Read below to find out how.</h6>
+								<p class="ms-5 my-4">Mentorship typically involves a more experienced individual (mentor) guiding and offering advices to a less experienced person often in a broader, long term capacity. While</p>
+								<p class="ms-5 mb-4">Coaching on the other hand is a more structured, goal-oriented relationship focused on developing specific skills or achieving specific outcomes.</p>
+								<p class="ms-5 mb-4">While both involves guidance and supports, their methods and goals differs.</p>
 							</div>
 						</div>
 						<div class="card-wrapper mt-4 ">
@@ -180,7 +172,7 @@
                             </button>
                         </div>
                         <div class="back">
-                            <button class="btn community-btn px-5 py-2 me-5">
+                            <button class="btn community-btn px-5 py-2 me-5" onclick="window.location.href='./Mentor-dashboard.html'">
                                 Back
                             </button>
                         </div>
