--- a/HTML/Mentor-dashboard/profile.html
+++ b/HTML/Mentor-dashboard/profile.html
@@ -111,6 +111,7 @@
             <!-- side navbar -->
             
             <div class="home-content mt-5">
+                <img src="/Images/left-arrow.svg" alt="" onclick="window.location.href='./Mentor-dashboard.html'">
                 <div class="profile-wrapper d-flex flex-column justify-content-center align-items-center w-25 mx-auto">
                     <img src="/Images/Peter-Profile.svg" alt="" class="w-50">
                     <h4 class="fs-3 mt-3">Peter David</h4>
