--- a/HTML/Mentor-dashboard/resource.html
+++ b/HTML/Mentor-dashboard/resource.html
@@ -112,7 +112,7 @@
     </header>
     <main>
         <section class="resources-container text-white">
-            <div class="resources mt-5 pt-1">
+            <div class="resources mt-5 pt-1 pb-5">
                 <div class="resource1 mt-5 pt-5">
                     <h2 class="display-4">General Resources</h2>
                     <div class="hr"></div>
