--- a/HTML/Mentor_signup_successful.html
+++ b/HTML/Mentor_signup_successful.html
@@ -16,7 +16,7 @@
         <div class="seconddiv">
           <h4>All Set</h4>
           <h5>Sign Up Sucessful</h5>
-          <a href="../HTML/Mentor_login.html">
+          <a href="../HTML/Mentor-dashboard/Mentor-dashboard.html">
             <button type="submit">Log in</button>
           </a>
         </div>
