--- a/HTML/Agile-Coach/agile-signup-successful.html
+++ b/HTML/Agile-Coach/agile-signup-successful.html
@@ -16,7 +16,7 @@
         <div class="seconddiv">
           <h4>All Set</h4>
           <h5>Sign Up Sucessful</h5>
-          <a href="./agile-login.html">
+          <a href="../AgileCoaches-dashboard/agile-coach-dashboard.html">
             <button type="submit">Log in</button>
           </a>
         </div>
