--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -22,7 +22,7 @@
 					  <li><a href="">Mentorship</a></li>
 					</ul>
 				  </li>
-				  <li><a href="./Contact.html">Contact Us</a></li>
+				  <li><a href="./Contact.html" class="active">Contact Us</a></li>
 				</ul>
 				<div class="btn-div">
 				  <button id="btn1" type="submit">Log in</button>
