--- a/HTML/Mentee-dashboard/my-posts.html
+++ b/HTML/Mentee-dashboard/my-posts.html
@@ -137,16 +137,16 @@
 					>
 						<h4 class="display-4 fw-medium">Community Forum</h4>
 						<a
-							href=""
+							href="new-posts.html"
 							class="fs-5"
 							>Recent</a
 						>
 						<a
-							href=""
+							href="./trending.html"
 							class="fs-5 text-black"
 							>Trending</a
 						>
-						<button class="btn community-btn px-5 py-2">
+						<button class="btn community-btn px-5 py-2" onclick="window.location.href='./create-post.html'">
 							Create a new Post
 						</button>
 					</div>
@@ -156,15 +156,29 @@
 						onclick="window.location.href='./mentee-dashboard-1.html'"
 					/>
 					<div class="card-wrapper mt-4 mb-5">
-						<div class="card border-light card1 px-3 pt-3 me-5 mb-5">
+						<div class="card border-light px-3 pt-3 me-5 mb-5" style="width: 760px;">
 							<div class="card-body ms-3">
-								<h3 class="card-title mt-3 mb-3">
+								<h3 class="card-title my-3 ms-5">
 									Agile tools. Jira Vs Trello
 								</h3>
-								<p class="card-text mb-5">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-									do eiusmod <br> tempor incididunt ut labore et dolore magna aliqua.
-								</p>
+								<div class="card-text mb-5">
+
+									<div class="card-top d-flex gap-5 mb-5">
+										<div class="left-text">
+											<img src="/Images/arrow-up.svg" alt="" class="mb-5">
+											<p class="my-5"></p>
+											<img src="/Images/arrow-bottom.svg" alt="" class="mt-3">
+										</div>
+										<div class="right-text">
+											<p class="mb-4">While both Trello and Jira are top-notch management tools, they each have different strengths. 
+												The biggest difference between the two is that Trello offers just Kanban boards while Jira offers
+												Kanban, Scrum and Sprint boards. Scrum and Kanban boards are both used to visually track a 
+												project's tasks.</p>
+											<p>If you are specifically working in the agile software development field, Jira is your best bet.
+												However, if your team doesn't require industry-specific customization, Trello is a much more
+												practical choice. Track time, stay on budget, analyze reports and automate payroll.</p>
+										</div>
+									</div>
 								<div class="views d-flex gap-5">
                                     <div class="veiw-1">
                                         <img src="/Images/arrow-up.svg" alt="">
@@ -200,24 +214,34 @@
                                 </div>
 							</div>
 						</div>
-						<div class="card border-light card1 px-3 pt-3 me-5">
-							<div class="card-body ms-3">
-								<h3 class="card-title mt-3 mb-3">
-									Scrum Certification exam study tips
-								</h3>
-								<p class="card-text mb-5">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-									do eiusmod <br> tempor incididunt ut labore et dolore magna aliqua.
-								</p>
-								<div class="views d-flex gap-5">
-                                    <div class="veiw-1">
-                                        <a href="" class="arrow">Draft</a>
-                                    </div>
-                                </div>
-                                <div class="posts d-flex justify-content-end gap-5 mt-3">
-                                    <button class="btn ms-5">Edit</button>
-                                    <button class="me-5">Delete</button>
-                                </div>
+					</div>
+					<div class="card border-light px-3 pt-3 me-5" style="width: 760px;">
+						<div class="card-body ms-3">
+							<h3 class="card-title mt-3 mb-3">
+								Scrum Certification exam study tips
+							</h3>
+							<ul class="card-text mb-4">
+								<p class="fw-semibold">Studying for scrum certification can be challenging, but these tips can help you prepare effectively.</p>
+								<li class="ms-4">Understand the Scrum Guide.</li>
+								<li class="ms-4">Take a Scrum Training Courses.</li>
+								<li class="ms-4">Practice with Sample Question.</li>
+								<li class="ms-4">Join Scrum Communities.</li>
+								<li class="ms-4">Create Study Aids.</li>
+								<li class="ms-4">Simulate Real-World Scenarios.</li>
+								<li class="ms-4">Set a Study Schedules.</li>
+								<li class="ms-4">Teach others.</li>
+								<li class="ms-4">Take Breaks.</li>
+								<li class="ms-4">Review and Revise.</li>
+								<li class="ms-4">Manage Exam Day.</li>
+							</ul>
+							<div class="views d-flex gap-5">
+								<div class="veiw-1">
+									<a href="" class="arrow">Draft</a>
+								</div>
+							</div>
+							<div class="posts d-flex justify-content-end gap-5 my-3">
+								<button class="btn ms-5">Edit</button>
+								<button class="me-5">Delete</button>
 							</div>
 						</div>
 					</div>
