--- a/HTML/Mentor-dashboard/trending.html
+++ b/HTML/Mentor-dashboard/trending.html
@@ -127,16 +127,16 @@
 					>
 						<h4 class="display-4 fw-medium">Community Forum</h4>
 						<a
-							href=""
+							href="new-posts.html"
 							class="fs-5"
 							>Recent</a
 						>
 						<a
-							href=""
+							href="./trending.html"
 							class="fs-5 text-black"
 							>Trending</a
 						>
-						<button class="btn community-btn px-5 py-2">
+						<button class="btn community-btn px-5 py-2" onclick="window.location.href='./create-post.html'">
 							Create a new Post
 						</button>
 					</div>
@@ -146,28 +146,41 @@
 						onclick="window.location.href='./Mentor-dashboard.html'"
 					/>
 					<div class="card-wrapper d-flex justify-content-between mt-4 mb-5">
-						<div class="card border-light card-1 px-3 pt-3 me-5">
+						<div class="card border-light px-3 pt-3 me-5">
 							<div class="card-body ms-3">
-								<h3 class="card-title mt-3 mb-3">
-									How to prepare for my first coaching session
+								<h3 class="card-title my-3 ms-5">
+									Tips on how to negotiate salary as a newbie. 
 								</h3>
-								<p class="card-text mb-4">
-									"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-									do eiusmod <br />
-									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-									minim <br />veniam, quis nostrud exercitation ullamco laboris
-									nisi ut aliquip <br />
-									ex ea commodo consequat.
-								</p>
+								<div class="card-text mb-4 d-flex gap-5">
+									<div class="left-text">
+										<img src="/Images/arrow-up.svg" alt="" class="">
+										<p class="my-5">14</p>
+										<img src="/Images/arrow-bottom.svg" alt="" class="mt-3">
+									</div>
+									<div class="right-text">
+										<ul>
+											<li>Research Salary Standard.</li>
+											<li>Know your worth.</li>
+											<li>Practice your Pitch.</li>
+											<li>Be Patient.</li>
+											<li>Focus on the Employer's Needs</li>
+											<li>Be open to Non-Salary Benefits.</li>
+											<li>Express Gratitude</li>
+											<li>Know your Minimum.</li>
+											<li>Consider your Future.</li>
+											<li>Seek Advice.</li>
+										</ul>
+									</div>
+								</div>
 								<hr class="mb-3" />
-								<div class="profile d-flex gap-2 align-items-end w-100">
+								<div class="profile d-flex gap-2 align-items-end w-100 mb-3">
 									<img
 										src="/Images/Ali.svg"
 										alt=""
 									/>
 									<div class="text me-5">
-										<h5 class="">Ali Mohammed</h5>
-										<p>2hr ago</p>
+										<h5 class="fs-4">Ali Mohammed</h5>
+										<p class="fw-semibold">2hr ago</p>
 									</div>
 									<div class="views-comments d-flex gap-5 ms-5">
 										<div class="views d-flex gap-2">
@@ -266,7 +279,7 @@
                                 <div class="comment d-flex">
                                     <div class="line ms-4"></div>
                                     <div class="commentP ms-5">
-                                        <p class="fs-5 mb-2">Ut enim ad minim veniam, quis nostrud exercitation</p>
+                                        <p class=" mb-2">This tip was timely. Thanks a bunch.</p>
                                         <div class="veiw-1">
                                             <img src="/Images/arrow-up.svg" alt="">
                                             <a href="" class="arrow">22</a>
@@ -282,8 +295,7 @@
                                 <div class="comment d-flex">
                                     <div class="line ms-4"></div>
                                     <div class="commentP ms-5">
-                                        <p class="fs-5 mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>
-                                            tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p class=" mb-2">Yes. It was indeed helpful.</p>
                                         <div class="veiw-1">
                                             <img src="/Images/arrow-up.svg" alt="">
                                             <a href="" class="arrow">5</a>
