--- a/HTML/landingpage.html
+++ b/HTML/landingpage.html
@@ -26,11 +26,11 @@
 			  <img  style="height: 120px;" src="/Images/Logo1.png" alt="">
 		
 			  <ul class="navlist">
-				<li><a href="/index.html">Home</a></li>
+				<li><a href="/index.html" class="active">Home</a></li>
 				<li><a href="./AboutUs.html">About Us</a></li>
 				<li id="service"><a href="#">Services</a>
 				  <ul id="list">
-					<li><a href="./SearchPage.html" class="">Agile Coaching</a></li>
+					<li><a href="./agile-search.html" class="">Agile Coaching</a></li>
 					<li><a href="./SearchPage.html" class="">Mentorship</a></li>
 				  </ul>
 				</li>
@@ -387,7 +387,7 @@
     <!-- Chatbot -->
     
     <div class="toggle-div"><button id="toggleChatButton">
-      <img src="/Images/chatbot-icon.png" alt="">
+      <img src="/Images/chatbot-icon2.png" alt="">
     </button></div>
     <div class="chat-container" id="chatContainer">
         <div class="chat-header">
