--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			  <img  style="height: 120px;" src="../Images/Logo1.png" alt="">
 		
 			  <ul class="navlist">
-				<li><a href="./index.html">Home</a></li>
+				<li><a href="./index.html" class="active">Home</a></li>
 				<li><a href="/HTML/AboutUs.html">About Us</a></li>
 				<li id="service"><a href="#">Services</a>
 				  <ul id="list">
@@ -386,7 +386,7 @@
 
     <!-- Chatbot -->
     
-    <div class="toggle-div"><button id="toggleChatButton"> <img src="/Images/chatbot-icon.png" alt="">
+    <div class="toggle-div"><button id="toggleChatButton"> <img src="/Images/chatbot-icon2.png" alt="">
     </button></div>
     <div class="chat-container" id="chatContainer">
         <div class="chat-header">
